{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 62,
  "lineage": "b564a456-fd5e-4ad3-2425-9aea8c7439c9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-07T08:08:41.966-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-all-ports",
            "log_config": [],
            "name": "allow-all-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-all-ports",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-07T04:06:11.704-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_kube_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-07T08:48:28.931-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-kube-port",
            "log_config": [],
            "name": "allow-kube-port",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-kube-port",
            "source_ranges": [
              "0.0.0.0/0",
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_node_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "31000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-08T10:07:16.561-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-node-app",
            "log_config": [],
            "name": "allow-node-app",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-node-app",
            "source_ranges": [
              "0.0.0.0/0",
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-07T04:06:11.712-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0",
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_udp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8472"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-07T08:07:30.217-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sl-practical/global/firewalls/allow-udp-port",
            "log_config": [],
            "name": "allow-udp-port",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "params": [],
            "priority": 1000,
            "project": "sl-practical",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/firewalls/allow-udp-port",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sl-practical/global/networks/sl-practical",
            "mtu": 0,
            "name": "sl-practical",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3983114744534455113",
            "numeric_id": "3983114744534455113",
            "project": "sl-practical",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-07T04:06:12.496-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sl-practical/regions/us-central1/subnetworks/sl-practical-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "sl-practical-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sl-practical/global/networks/sl-practical",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sl-practical",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sl-practical/regions/us-central1/subnetworks/sl-practical-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1847769172329157467
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}